# doc-pipeline-engine

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  question.md
.github/workflows/: codeql.yaml
contracts/: AnalysisReport.schema.json  CanonicalDoc.schema.json  ClassificationManifest.schema.json  DiscoveryManifest.schema.json  EvalReport.schema.json  ExtractionBundle.schema.json  FormatConformance.schema.json  FormatMatch.schema.json  InputFormat.schema.json  OutputFormat.schema.json
docs/: architecture.md  landscape.md  roadmap.md
docs/plans/: v0.1-init.md
scripts/: download-samples.sh  generate-fixtures.py
src/doc_pipeline_engine/base/: __init__.py  contracts.py
tests/: test_contracts.py  test_fixtures.py
workers/base/: contracts.py
