[project]
name = "doc-pipeline-engine"
version = "0.1.0"
description = "Data-plane workers for the doc-pipeline Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.21",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
# Adapter-specific extras (installed per deployment; kept optional in v0.1)
docling = ["docling>=1.0"]
ocr = ["pillow>=10.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
