[project]
name = "doc-pipeline-engine"
version = "0.1.0"
description = "Modular document processing engine with contract-gated pipeline stages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
license-files = ["LICENSE", "NOTICE"]
dependencies = [
  "jsonschema>=4.21",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_pipeline_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
